# pnl_calc_test

./: .gitignore  CMakeLists.txt  README.md  build.sh
data/: test_input_1.csv  test_input_2.csv  test_input_3.csv
include/: pnl_calc.h  trade.h
src/: CMakeLists.txt  main.cpp  pnl_calc.cpp  trade.cpp
test/: CMakeLists.txt  test_pnl_calc.cpp  test_trade.cpp
